# Protei-CourseWork-2023

./: CMakeLists.txt  README.md  conanfile.txt
configs/: config.json
src/: CMakeLists.txt  main.cpp  service.cpp  service.hpp
src/cdr/: cdr.cpp  cdr.hpp
src/config/: config.cpp  config.hpp
src/controller/: controller.cpp  controller.hpp
src/io_manager/: io_manager.cpp  io_manager.hpp
src/operators_manager/: operator.cpp  operator.hpp  operators_manager.cpp  operators_manager.hpp
src/operators_manager/calls_queue/: call.cpp  call.hpp  calls_queue.cpp  calls_queue.hpp  ts_queue.hpp
tests/: CMakeLists.txt  calls_queue_test.cpp  operators_manager_test.cpp  test_cdr.txt  ts_queue_test.cpp
tests/test_configs/: config_with_cdh_off.json  config_with_cdh_on.json
